--- a/week2.ipynb
+++ b/week2.ipynb
@@ -119,7 +119,8 @@
     "\n",
     "ex) 1234가 입력되면 1+2+3+4를 출력\n",
     "\n",
-    "변수의 값은 8952 로 설정하세요\n"
+    "변수의 값은 8952 로 설정하세요\n",
+    "hint: 나눗셈과 나머지 연산을 활용하세요 \n"
    ]
   },
   {
