--- a/Week 2.ipynb
+++ b/Week 2.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# week 2 python\n",
+    "# Week 2 Practice\n",
     "\n",
     "\n"
    ]
