--- a/Lecture 6.ipynb
+++ b/Lecture 6.ipynb
@@ -53,7 +53,7 @@
    "source": [
     "### 6-2\n",
     "깃허브에  \n",
-    "module.py 파일이 업로드 되어있습니다.  \n",
+    "module.py 파일이 업로드 되어있습니다. 이 파일을 module.py로 저장하세요(확장자명이 .py입니다.) \n",
     "\n",
     "이 파일을 저장 후  이 파일의 위치와 같은 위치에 놓은뒤  \n",
     "해당 모듈을 import하세요  \n",
