--- a/Lecture 5.ipynb
+++ b/Lecture 5.ipynb
@@ -27,8 +27,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ㅁㄴㅇ\n",
-      "input: ㅁㄴㅇ\n",
+      "test\n",
+      "input: test\n",
       "input's type : <class 'str'>\n"
      ]
     }
