--- a/Lecture 8.ipynb
+++ b/Lecture 8.ipynb
@@ -90,7 +90,7 @@
    ],
    "source": [
     "A=[1,2,3,4,5,6,7,8,9]\n",
-    "print(A[0:3]) # 0번 인덱스부터 ~ 3번쨰 인덱스까지 \n"
+    "print(A[0:3]) # 0번 인덱스부터 ~ 2번째 인덱스까지 \n"
    ]
   },
   {
