--- a/Lecture 8.ipynb
+++ b/Lecture 8.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -60,10 +60,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "a=[0,1,2,3,4,5,6,7,8,9,10]\n",
+    "b=[100,99,98,97,96,95,94,93,92,91,90]\n",
+    "\n",
+    "# 합친뒤 출력하세요"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -77,20 +82,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1, 2, 3]\n"
+      "[1, 2, 3]\n",
+      "[34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60]\n"
      ]
     }
    ],
    "source": [
     "A=[1,2,3,4,5,6,7,8,9]\n",
-    "print(A[0:3]) # 0번 인덱스부터 ~ 2번째 인덱스까지 \n"
+    "print(A[0:3]) # 0번 인덱스부터 ~ 3번쨰 인덱스까지 \n",
+    "\n",
+    "B=list(range(100))\n",
+    "print()#슬라이싱 한 뒤 출력하세요"
    ]
   },
   {
@@ -111,10 +120,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'a': '에이'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "D={\"a\":\"에이\"}#나머지 값들도 채워넣으세요 \n",
+    "\n",
+    "print(dic) "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -136,10 +157,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2500\n",
+      "3000\n",
+      "500\n",
+      "1000\n",
+      "1500\n",
+      "9900\n",
+      "1200\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "D={'프링글스':2500,'치약':3000,'사탕':500,'과자':1000,'아이스크림':1500,'책':9900,'음료수':1200}\n",
+    "\n",
+    "for i in D.values():\n",
+    "    print(i)# 이 값들을 하나씩 합쳐서 하나의 변수에 저장하세요 \n",
+    "    \n",
+    "print()#합을 출력하세요"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -155,13 +198,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'test': 1, 'set': 2}\n"
+     ]
+    }
+   ],
+   "source": [
+    "#딕셔너리에 새로운 값을 추가하는 방법은 다음과 같습니다.\n",
+    "\n",
+    "D={}# 딕셔너리 생성\n",
+    "D['test']=1#test와 1을 매핑\n",
+    "D['set']=2#set과 2를 매핑\n",
+    "print(D)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'치킨': 0, '피자': 1, '콜라': 2, '우유': 3, '초콜릿': 4, '햄버거': 5, '핫도그': 6}\n"
+     ]
+    }
+   ],
    "source": [
     "A=[\"우유\",\"치킨\",\"피자\",\"초콜릿\",\"콜라\",\"치킨\",\"핫도그\",\"햄버거\",\"치킨\",\"피자\",\"콜라\"]\n",
+    "\n",
     "B=set(A)#set()을 사용하게되면 인자로 받은 값을 집합으로 만들게 됩니다.\n",
-    "\n"
+    "\n",
+    "C={}\n",
+    "number=0\n",
+    "for i in B:\n",
+    "    #i는 str값입니다 이 값을 이용해 number와 매핑시키세요 []를 이용하시면 됩니다. \n",
+    "    number+=1\n",
+    "    \n",
+    "print(C)\n"
    ]
   }
  ],
