--- a/Lecture 6.ipynb
+++ b/Lecture 6.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,35 @@
     "        pass\n",
     "    def mul():\n",
     "        pass\n",
-    "    "
+    "    \n",
+    "class mini(calculator):\n",
+    "    def add(self,a,b):\n",
+    "        \n",
+    "        #안의 값을 채워넣으세요\n",
+    "        \n",
+    "    def mul(self,a,b):\n",
+    "        \n",
+    "        #안의 값을 채워넣으세요"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "68\n",
+      "100\n"
+     ]
+    }
+   ],
+   "source": [
+    "mini=mini()\n",
+    "print(mini.add(33,35))\n",
+    "print(mini.mul(33,35))"
    ]
   },
   {
@@ -53,7 +81,7 @@
    "source": [
     "### 6-2\n",
     "깃허브에  \n",
-    "module.py 파일이 업로드 되어있습니다. 이 파일을 module.py로 저장하세요(확장자명이 .py입니다.) \n",
+    "module.py 파일이 업로드 되어있습니다.  \n",
     "\n",
     "이 파일을 저장 후  이 파일의 위치와 같은 위치에 놓은뒤  \n",
     "해당 모듈을 import하세요  \n",
@@ -65,10 +93,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "먹다\n",
+      "요리하다\n",
+      "요리하다\n",
+      "먹다\n"
+     ]
+    }
+   ],
+   "source": [
+    "#이 출에 모듈에서 함수들을 import 하세요\n",
+    "\n",
+    "eat()\n",
+    "cook()\n",
+    "cook_and_eat()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -81,7 +126,7 @@
     "numpy 모듈은 배열의 조작이나 여러 동작들을 쉽게 해주는 모듈입니다.  \n",
     "matplotlib는 그래프를 그리거나 변경 할 수 있습니다.  \n",
     "\n",
-    "3번문제에서는 문제를 풀 필요없이 아래 값들 자유롭게 조작해보세요.  "
+    "4번문제에서는 문제를 풀 필요없이 아래 값들 자유롭게 조작해보세요.  "
    ]
   },
   {
@@ -204,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,19 +258,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(random.randint(0,10))#자유롭게 연습해 보세요 0부터 10까지의 랜덤한 int를 생성합니다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0\n"
+      "2\n",
+      "player 1\n",
+      "비김\n",
+      "비김\n",
+      "비김\n",
+      "player 1\n",
+      "player 1\n",
+      "player 1\n",
+      "비김\n",
+      "player 2\n",
+      "player 1\n"
      ]
     }
    ],
    "source": [
-    "print(random.randint(0,2))\n"
+    "for i in range(10):\n",
+    "    #1번 플레이어의 행동을 랜덤하게 생성하세요\n",
+    "    #2번 플레이어의 행동을 랜덤하게 생성하세요\n",
+    "    if(a==b):\n",
+    "        winner=\"비김\"\n",
+    "    elif(\"\"\"1번 플레이어가 이기는 조건을 이 elif 문 안에 채워넣으세요\"\"\"):\n",
+    "        winner=\"player 1\"\n",
+    "    else:\n",
+    "        winner= \"player 2\"\n",
+    "\n",
+    "    print(winner)"
    ]
   },
   {
@@ -244,10 +318,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "틀림\n",
+      "2\n",
+      "틀림\n",
+      "10\n",
+      "틀림\n",
+      "3\n",
+      "틀림\n",
+      "5\n",
+      "맞춤\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(5):\n",
+    "    \n",
+    "    #랜덤 넘버를 생성하세요 \n",
+    "    #사용자가 인풋을 이용해 guess를 받도록 하세요 \n",
+    "    \n",
+    "    if(num==int(guess)):\n",
+    "        print(\"맞춤\")\n",
+    "        break;\n",
+    "    else:\n",
+    "        print(\"틀림\")"
+   ]
   }
  ],
  "metadata": {
