--- a/Lecture 6.ipynb
+++ b/Lecture 6.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,17 +47,16 @@
     "    \n",
     "class mini(calculator):\n",
     "    def add(self,a,b):\n",
-    "        \n",
     "        #안의 값을 채워넣으세요\n",
     "        \n",
     "    def mul(self,a,b):\n",
-    "        \n",
+    "    \n",
     "        #안의 값을 채워넣으세요"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -131,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -154,10 +153,10 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x2436cb52b38>]"
+       "[<matplotlib.lines.Line2D at 0x17f9d72c2e8>]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -189,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -198,7 +197,7 @@
        "Text(0, 0.5, 'temperture')"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -249,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,38 +257,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(random.randint(0,10))#자유롭게 연습해 보세요 0부터 10까지의 랜덤한 int를 생성합니다."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(random.randint(0,10))#자유롭게 연습해 보세요 0부터 10까지의 랜덤한 int를 생성합니다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "player 2\n",
+      "player 2\n",
       "player 1\n",
+      "player 2\n",
       "비김\n",
-      "비김\n",
-      "비김\n",
-      "player 1\n",
-      "player 1\n",
-      "player 1\n",
       "비김\n",
       "player 2\n",
-      "player 1\n"
+      "player 1\n",
+      "player 2\n",
+      "player 2\n"
      ]
     }
    ],
    "source": [
     "for i in range(10):\n",
+    "    \n",
     "    #1번 플레이어의 행동을 랜덤하게 생성하세요\n",
     "    #2번 플레이어의 행동을 랜덤하게 생성하세요\n",
     "    if(a==b):\n",
@@ -318,20 +325,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "4\n",
+      "틀림\n",
       "1\n",
-      "틀림\n",
-      "2\n",
-      "틀림\n",
-      "10\n",
-      "틀림\n",
-      "3\n",
       "틀림\n",
       "5\n",
       "맞춤\n"
@@ -340,7 +343,6 @@
    ],
    "source": [
     "for i in range(5):\n",
-    "    \n",
     "    #랜덤 넘버를 생성하세요 \n",
     "    #사용자가 인풋을 이용해 guess를 받도록 하세요 \n",
     "    \n",
