--- a/Lecture 10.ipynb
+++ b/Lecture 10.ipynb
@@ -43,15 +43,20 @@
     "\n",
     "test.txt라는 파일을 하나 생성하고 해당 파일에  \n",
     "lexture 10 test  \n",
-    "라는 내용을 적고 저장하는 코드를 작성하세요"
+    "라는 내용을 적고 저장하는 코드를 작성하세요  \n",
+    "아래 코드는 test.txt를 열고 test라는 내용을 적은뒤 저장하는 코드입니다."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "f = open(\"test.txt\", 'w')\n",
+    "f.write('test')\n",
+    "f.close()\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -79,9 +84,11 @@
     "D={}\n",
     "text=\"asdeedadaaasswwqqeeddsssaaseeeqqwwdddassddqqassseeddwwqqasddewq\"\n",
     "\n",
+    "# 다른 방식을 사용하셔도 좋습니다.\n",
+    "\n",
     "for i in text:\n",
     "    if \"\"\"조건을 채워넣으세요 \"\"\":# 이미 있다면\n",
-    "         #해당 key의 value를 1 증가시킵니다\n",
+    "         #해당 key의 value를 1 증가시킵니다.\n",
     "    else#해당 key가 없다면\n",
     "         #해당 key의 값을 1로 합니다\n",
     "        \n",
@@ -94,6 +101,15 @@
    "source": [
     "### 10-4\n",
     "주어진 텍스트에서 전화번호만 가져오는 코드를 작성하세요\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re"
    ]
   },
   {
